RESOLVED FIXED214702
Crash in block in WebKit::LaunchServicesDatabaseObserver::LaunchServicesDatabaseObserver
https://bugs.webkit.org/show_bug.cgi?id=214702
Summary Crash in block in WebKit::LaunchServicesDatabaseObserver::LaunchServicesDatab...
Per Arne Vollan
Reported 2020-07-23 15:00:19 PDT
Calling xpc_connection_send_message in the block in WebKit::LaunchServicesDatabaseObserver::LaunchServicesDatabaseObserver will sometimes crash because the XPC connection object is invalid.
Attachments
Patch (5.66 KB, patch)
2020-07-23 15:28 PDT, Per Arne Vollan
cdumez: review+
Patch (5.70 KB, patch)
2020-07-23 16:00 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2020-07-23 15:00:50 PDT
Per Arne Vollan
Comment 2 2020-07-23 15:28:13 PDT
Chris Dumez
Comment 3 2020-07-23 15:50:09 PDT
Comment on attachment 405084 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=405084&action=review > Source/WebKit/NetworkProcess/cocoa/LaunchServicesDatabaseObserver.h:59 > + Lock m_lock; I think I would call this m_connectionsLock for clarity.
Per Arne Vollan
Comment 4 2020-07-23 15:54:09 PDT
(In reply to Chris Dumez from comment #3) > Comment on attachment 405084 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=405084&action=review > > > Source/WebKit/NetworkProcess/cocoa/LaunchServicesDatabaseObserver.h:59 > > + Lock m_lock; > > I think I would call this m_connectionsLock for clarity. Will do. Thanks for reviewing!
Per Arne Vollan
Comment 5 2020-07-23 16:00:15 PDT
EWS
Comment 6 2020-07-23 16:54:27 PDT
Committed r264806: <https://trac.webkit.org/changeset/264806> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405090 [details].
Note You need to log in before you can comment on or make changes to this bug.