Crash in block in WebKit::LaunchServicesDatabaseObserver::LaunchServicesDatabaseObserver https://bugs.webkit.org/show_bug.cgi?id=214702

Reviewed by Chris Dumez.

Calling xpc_connection_send_message in the block in WebKit::LaunchServicesDatabaseObserver::LaunchServicesDatabaseObserver will
sometimes crash because the XPC connection object is invalid. The block is called on a secondary thread, and the m_connections
member variable needs to be protected by a lock. Also, make sure the XPC connections objects in m_connections are valid by
retaining them when captured in a block. This is done by redeclaring a local XPC connection variable as an OSObjectPtr instead
of a raw XPC connection object.

No new tests, since I have not been able to reproduce this issue.

* NetworkProcess/cocoa/LaunchServicesDatabaseObserver.h:
* NetworkProcess/cocoa/LaunchServicesDatabaseObserver.mm:
(WebKit::LaunchServicesDatabaseObserver::LaunchServicesDatabaseObserver):
(WebKit::LaunchServicesDatabaseObserver::startObserving):
(WebKit::LaunchServicesDatabaseObserver::handleEvent):
* Shared/Cocoa/XPCEndpoint.mm:
(WebKit::XPCEndpoint::XPCEndpoint):


Canonical link: https://commits.webkit.org/227532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264806 268f45cc-cd09-0410-ab3c-d52691b4dbfc