Source/WebKit/NetworkProcess/cocoa/LaunchServicesDatabaseObserver.h
@@ -28,6 +28,7 @@
 #include "NetworkProcess.h"
 #include "NetworkProcessSupplement.h"
 #include "XPCEndpoint.h"
+#include <wtf/Lock.h>
 #include <wtf/OSObjectPtr.h>
 #include <wtf/RetainPtr.h>
 
@@ -55,6 +56,7 @@ private:
 
     RetainPtr<id> m_observer;
     Vector<OSObjectPtr<xpc_connection_t>> m_connections;
+    Lock m_connectionsLock;
 };
 
 }
