Source/WebKit/Shared/Cocoa/XPCEndpoint.mm
@@ -40,20 +40,20 @@ XPCEndpoint::XPCEndpoint()
         xpc_type_t type = xpc_get_type(message);
 
         if (type == XPC_TYPE_CONNECTION) {
-            xpc_connection_t connection = message;
+            OSObjectPtr<xpc_connection_t> connection = message;
             audit_token_t auditToken;
-            xpc_connection_get_audit_token(connection, &auditToken);
+            xpc_connection_get_audit_token(connection.get(), &auditToken);
 
             if (!WTF::hasEntitlement(auditToken, "com.apple.private.webkit.use-xpc-endpoint")) {
                 // Uncomment before landing; this is commented out because the bots does not seem to update the entitlements on incremental builds.
                 // WTFLogAlways("Audit token does not have required entitlement");
                 // return;
             }
-            xpc_connection_set_target_queue(connection, dispatch_get_main_queue());
-            xpc_connection_set_event_handler(connection, ^(xpc_object_t event) {
-                handleEvent(connection, event);
+            xpc_connection_set_target_queue(connection.get(), dispatch_get_main_queue());
+            xpc_connection_set_event_handler(connection.get(), ^(xpc_object_t event) {
+                handleEvent(connection.get(), event);
             });
-            xpc_connection_resume(connection);
+            xpc_connection_resume(connection.get());
         }
     });
     xpc_connection_resume(m_connection.get());
